Fix ScrollBar

--- a/src/Components/FilterCards/FilterCards.css
+++ b/src/Components/FilterCards/FilterCards.css
@@ -1,8 +1,9 @@
 .card-container {
+    margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    height: 500px;   /* Set a fixed height for the container */
+    height: 360px;   /* Set a fixed height for the container */
     overflow-y: scroll;  /* Add a scrollbar for overflow content */
 }
 
